# verdad

./: .cproject  .gitignore  .gitmodules  .project  AGENTS.md  CMakeLists.txt  LICENSE  MERGE_COMMIT.md  README.md  install.sh
.github/: copilot-instructions.md
.github/workflows/: build.yml  linux_zip.yml  release.yml
LICENSES/: README.md  SQLite-Public-Domain.txt
_codeql_build_dir/: verdad
cmake/: BuildDebPackage.cmake  DownloadAppImageTools.cmake  FindSWORD.cmake  InstallBundledSword.cmake.in  PrepareAppImage.cmake  RenameAppImage.cmake
data/: Info.plist.in  help.html  io.github.mozmck.Verdad.metainfo.xml.in  master.css  verdad.desktop.in
doc/: Bible_program.txt  bibletime_strong_hover_info.txt  offline-german-morphology.md  offline-spanish-morphology.md  tasks.txt
src/: main.cpp
src/app/: BuildConfig.h.in  PerfTrace.h  PlatformPaths.cpp  PlatformPaths.h  VerdadApp.cpp  VerdadApp.h
src/import/: ImportedModuleManager.cpp  ImportedModuleManager.h
src/reading/: ReadingPlanGenerator.cpp  ReadingPlanGenerator.h  ReadingPlanManager.cpp  ReadingPlanManager.h  ReadingPlanUtils.cpp
src/search/: SearchIndexer.cpp  SearchIndexer.h  SearchSnippet.cpp  SearchSnippet.h  SmartSearch.cpp  SmartSearch.h
src/sword/: ScriptureLink.cpp  ScriptureLink.h  ScriptureReference.cpp  ScriptureReference.h  SwordManager.cpp  SwordManager.h  SwordPaths.cpp  SwordPaths.h
src/tags/: TagManager.cpp  TagManager.h
src/translation/: MorphologyProvider.cpp  MorphologyProvider.h  SqliteMorphologyProvider.cpp  SqliteMorphologyProvider.h  TranslationNormalization.cpp  TranslationNormalization.h  WikDictManager.cpp  WikDictManager.h
src/ui/: BibleBookChoice.cpp  BibleBookChoice.h  BiblePane.cpp  BiblePane.h  DailyWorkspaceState.h  FilterableChoiceWidget.cpp  FilterableChoiceWidget.h  HtmlEditorWidget.cpp  HtmlEditorWidget.h  HtmlWidget.cpp  HtmlWidget.h  LeftPane.cpp  LeftPane.h  MainWindow.cpp  MainWindow.h  ModuleManagerDialog.cpp  ModuleManagerDialog.h  ModulePanel.cpp  ModulePanel.h  ReadingPlanEditorDialog.cpp  RightPane.cpp  RightPane.h  SearchPanel.cpp  SearchPanel.h  StyledTabs.cpp  StyledTabs.h  TagPanel.cpp  TagPanel.h  VerseContext.cpp  VerseContext.h  VerseReferenceSort.h  WrappingChoice.cpp  WrappingInputChoice.cpp
tests/: MorphologyTests.cpp  test_import_apertium_german_morphology.py  test_import_apertium_spanish_morphology.py
tests/fixtures/: apertium-mini-deu.dix  apertium-mini-spa.dix  apertium-spa-analyzer.txt
tools/: apertium_morphology.py  import_apertium_german_morphology.py  import_apertium_spanish_morphology.py
